--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,12 @@
 <%- include ("partials/headera") %> 
-<div class="col-lg-6 col-md-12" id="form">
-    <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-12" style="margin-top: 17%">
+
+    <div class="row justify-content-center align-items-center">
+        <div class="col-lg-6 col-md-12" id="form">
             <div id="form1">
-                
+                <div>
+                    <h1 class="text-center" class="appTitle"><i class="fas fa-map-marked-alt fa-3x"></i> <br> Territory Manager</h1>
+                    <h4 class="text-center" class="appDescription">I zarządzanie terenami staje się o wiele prostsze</h4>
+                </div>
                 <h1 class="login">Zaloguj się do panelu</h1>
                 <% if(error.length > 0){ %>
                     <div class="alert alert-danger" role="alert">
@@ -45,7 +48,7 @@
                 </div>
                 
             </div>
-        </div>
+
 
 
 <script src="/script.js"></script>
