--- a/views/ministryGroups/deleteConfirm.ejs
+++ b/views/ministryGroups/deleteConfirm.ejs
@@ -7,13 +7,13 @@
             </div>
             <div id="form1">
                 <div class="text-center">
-                    <a href="/preachers" id="back">
+                    <a href="/congregations/<%= currentUser._id %>" id="back">
                         <i class="fas fa-arrow-left"></i>
-                        Wróć do spisu głosicieli
+                        Wróć do informacji zborowych
                     </a>
                 </div>
                 <h1 class="login">
-                    Czy na pewno chcesz usunąć głosiciela <%= preacher.name %>?
+                    Czy na pewno chcesz usunąć grupę służby <%= ministryGroup.name %>?
                 </h1>
                 <% if(error.length > 0){ %>
                     <div class="alert alert-danger" role="alert">
@@ -25,12 +25,12 @@
                         <%= success %>
                     </div>
                 <% } %>
-                <form action="/preachers/<%= preacher._id %>?_method=DELETE" method="post">
+                <form action="/congregations/<%= currentUser._id %>/ministryGroups/<%= ministryGroup._id %>?_method=DELETE" method="post">
                    
                     <input required type="submit" value="Tak" class="btn button btn-warning btn-golden">
                    
                 </form>
-                <a href="/preachers" class="btn button btn-dark btn-green">
+                <a href="/congregations/<%= currentUser._id %>" class="btn button btn-dark btn-green">
                     Nie
                 </a>
             </div>
