--- a/views/territories/deleteConfirm.ejs
+++ b/views/territories/deleteConfirm.ejs
@@ -1,12 +1,17 @@
 <%- include("../partials/headera") %>
-<div class="col-lg-6 col-md-12" id="form">
     <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-12" style="margin-top: 8%">
+        <div class="col-lg-6 col-md-12" id="form">
+            <div>
+                <h1 class="text-center" class="appTitle"><i class="fas fa-map-marked-alt fa-3x"></i> <br> Territory Manager</h1>
+                <h4 class="text-center" class="appDescription">I zarządzanie terenami staje się o wiele prostsze</h4>
+            </div>
             <div id="form1">
-                <a href="/territories" id="back">
-                    <i class="fas fa-arrow-left"></i>
-                    Wróć do spisu terenów
-                </a>
+                <div class="text-center">
+                    <a href="/territories" id="back">
+                        <i class="fas fa-arrow-left"></i>
+                        Wróć do spisu terenów
+                    </a>
+                </div>
                 <h1 class="login">
                     Czy na pewno chcesz usunąć ten teren?
                 </h1>
@@ -100,7 +105,6 @@
         </div>
         
     </div>
-</div>
 
 </body>
 </html>
