--- a/views/territories/new.ejs
+++ b/views/territories/new.ejs
@@ -1,13 +1,18 @@
 
 <%- include ("../partials/headera") %> 
-<div class="col-lg-6 col-md-12" id="form" style="height:100%">
     <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-12" style="margin-top: 4%">
+        <div class="col-lg-6 col-md-12" id="form">
+            <div>
+                <h1 class="text-center" class="appTitle"><i class="fas fa-map-marked-alt fa-3x"></i> <br> Territory Manager</h1>
+                <h4 class="text-center" class="appDescription">I zarządzanie terenami staje się o wiele prostsze</h4>
+            </div>
             <div id="form1">
-                <a href="/territories/available">
-                    <i class="fas fa-arrow-left"></i>
-                    Wróć do strony z wolnymi terenami
-                </a>
+                <div class="text-center">
+                    <a href="/territories/available">
+                        <i class="fas fa-arrow-left"></i>
+                        Wróć do strony z wolnymi terenami
+                    </a>
+                </div>
                 <h1 class="login">Dodaj teren dla zboru <%= currentUser.username %></h1>
                 <% if(error.length > 0){ %>
                     <div class="alert alert-danger" role="alert">
@@ -169,7 +174,6 @@
                 </div>
                 
             </div>
-        </div>
    
 <script src="/manageKindOfTerritories.js"></script>
 <script>
