--- a/views/ministryGroups/generate-pdf.ejs
+++ b/views/ministryGroups/generate-pdf.ejs
@@ -1,7 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <script src="https://kit.fontawesome.com/b2ec1cb26d.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,9 +8,13 @@
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
+            margin: 0 15px;
+            font-style: normal;
         }
-        thead,
-        .ministryGroup__title {
+        table {
+            font-style: normal;
+        }
+        thead {
             background: #9999CC;
             color: #fff;
             border-color: #fff;
@@ -22,29 +25,6 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        .ministryGroups {
-            display: flex;
-            margin-top: 20px;
-        }
-        .ministryGroup {
-            
-        }
-
-        .ministryGroup__item {
-            text-align: center;
-            border-bottom: 1px solid grey;
-            border-left: 1px solid grey;
-            padding: 8px;
-            margin-bottom: 0;
-        }
-
-        .ministryGroup:last-child {
-            border-right: 1px solid grey;
-        }
-
-        .ministryGroup__item:nth-of-type(2n) {
-            background: #eaeaea;
-        }
     </style>
 </head>
 
@@ -69,7 +49,7 @@
                                 <tr class="text-center">
                                    <% ministryGroups.forEach((group, j) => { %>
                                         <% if(ministryGroups[j]?.preachers[i]?.name === group.overseer.name){ %>
-                                            <td><strong><%= ministryGroups[j]?.preachers[i]?.name %></strong></td>
+                                            <td style="background-color: #ece9e9;"><strong><%= ministryGroups[j]?.preachers[i]?.name %></strong></td>
                                         <% } else { %>
                                             <td><%= ministryGroups[j]?.preachers[i]?.name %></td>
                                         <% } %>
