--- a/views/policy.ejs
+++ b/views/policy.ejs
@@ -22,7 +22,7 @@
                             <li class="description">
                                 Niniejsza polityka dotyczy Serwisu www, 
                                 funkcjonującego pod adresem url: 
-                                <strong>territorymanager.wbesiteswithpassion.pl</strong> 
+                                <strong>territorymanager.pl</strong> 
                             </li>
                             <li class="description">
                                 Operatorem serwisu oraz Administratorem danych
@@ -429,7 +429,7 @@
                     <h1 class="title_r">Klauzula RODO</h1>
                     <article class="description">
                         <p class="description">Poniższa informacja stanowi zwięzły, zrozumiały i przejrzysty skrót informacji zamieszczonych w <a
-                                href="https://territorymanager.websiteswithpassion.pl/policy">Polityce Prywatności</a> odnośnie
+                                href="https://territorymanager.pl/policy">Polityce Prywatności</a> odnośnie
                             Administratora danych, celu i sposobu przetwarzania danych osobowych oraz Twoich praw w związku z tym
                             przetwarzaniem, w formie wymaganej do spełnienia obowiązku informacyjnego RODO. Szczegóły dotyczące sposobu
                             przetwarzania i podmiotów uczestniczących w tym procesie dostępne są we wskazanej polityce.</p>
@@ -459,7 +459,7 @@
                         <p>W serwisie przetwarzane są <strong>dane osobowe zwykłe</strong>, podane dobrowolnie przez osoby, których
                             dotyczą<br /><small>(Np. imię i nazwisko, login, adres e-mail, telefon, adres IP, itp.)</small></p>
                         <p>Szczegółowy zakres przetwarzanych danych dostępny jest w <a
-                                href="https://territorymanager.websiteswithpassion.pl/policy">Polityce Prywatności</a>.</p>
+                                href="https://territorymanager.pl/policy">Polityce Prywatności</a>.</p>
                         <h2 class="title">Jakie są cele przetwarzania przez nas danych?</h2>
                         <p>Dane osobowe dobrowolnie podane przez Użytkowników są przetwarzane w jednym z następujących celów:</p>
                         <ul>
