--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,15 @@ body {
     margin-bottom: 10px;
 }
 
+.page-link {
+    color: #28a745;
+}
+
+.page-item.active .page-link{
+    background: #28a745;
+    border-color: #28a745;
+    font-weight: 700;
+}
 .card {
     margin-bottom: 90px;
 }
