--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,22 +26,22 @@
                
                 <% if(typeof all !== 'undefined'){ %>
                     <li class="my_nav-item">
-                        <a class="my_nav-link my_active" href="/territories"><i class="fas fa-map-marked-alt"></i> <br> Tereny</a>
+                        <a class="my_nav-link my_active" href="/territories?page=1"><i class="fas fa-map-marked-alt"></i> <br> Tereny</a>
                     </li>
                 <% } else { %>
                     <li class="my_nav-item">
-                        <a class="my_nav-link" href="/territories"><i class="fas fa-map-marked-alt"></i> <br> Tereny</a>
+                        <a class="my_nav-link" href="/territories?page=1"><i class="fas fa-map-marked-alt"></i> <br> Tereny</a>
                     </li>
                 <% } %>
             
                 
                 <% if(typeof pre !== 'undefined'){ %>
                     <li class="my_nav-item">
-                        <a class="my_nav-link my_active" href="/preachers"><i class="fa-solid fa-user"></i> <br> Głosiciele</a>
+                        <a class="my_nav-link my_active" href="/preachers?page=1"><i class="fa-solid fa-user"></i> <br> Głosiciele</a>
                     </li>
                 <% } else { %>
                     <li class="my_nav-item">
-                        <a class="my_nav-link" href="/preachers"><i class="fa-solid fa-user"></i> <br> Głosiciele</a>
+                        <a class="my_nav-link" href="/preachers?page=1"><i class="fa-solid fa-user"></i> <br> Głosiciele</a>
                     </li>
                 <% } %>
     
