--- a/views/preachers/index.ejs
+++ b/views/preachers/index.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Głosiciele zboru <%= currentUser.username %>: <%= preachers.length %></h1>
+                <h1 class="text-center">Głosiciele zboru <%= currentUser.username %>: strona <%= result.page %> z <%= result.totalPages %></h1>
                 <div class="text-center">
                     <a href="/preachers/new" class="btn btn-success" style="margin-bottom: 15px;">Dodaj głosiciela</a>
                 </div>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <br>
-        <% if(preachers.length === 0){ %>
+        <% if(result.docs.length === 0){ %>
             <div class="row justify-content-center">
                     <div class="col-lg-8 col-md-12">
                         <div class="alert alert-info text-center" role="alert">
@@ -31,8 +31,8 @@
                     </div>
                 </div>
         <% } else { %>
-            <div class="row">
-                <% preachers.forEach((preacher) => { %>
+            <div class="row" style="padding-bottom: 80px;">
+                <% result.docs.forEach((preacher) => { %>
                     <div class="col-lg-12">
                         <div class="preacher__info">
                             <div class="info">
@@ -46,6 +46,24 @@
                         </div>
                     </div>
                 <% }) %>
+                <nav style="margin-top: 20px">
+                    <ul class="pagination justify-content-center">
+                        <% for( let index = 1; index <= result.totalPages; index++ ) { %>
+                            <% if (index === result.page) { %>
+                                <li class="page-item active">
+                                    <a href="/preachers?page=<%= index %>" class="page-link"><%= index %></a>
+                                </li>
+                                
+                            <% } else { %>
+                                <li class="page-item">
+                                    <a href="/preachers?page=<%= index %>" class="page-link"><%= index %></a>
+                                </li>
+                               
+                            <% } %>
+                        <% } %>
+                    
+                    </ul>
+                </nav>
                
             </div>
         <% } %>
