--- a/views/territories/index.ejs
+++ b/views/territories/index.ejs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="text-center">Wszystkie tereny zboru <%= currentUser.username %>: <%= territories.length %></h1>
+                <h1 class="text-center">Tereny zboru <%= currentUser.username %>: strona <%= result.page %> z <%= result.totalPages %></h1>
             </div>
         </div>
         <%- include("../partials/territorySearch") %>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         <% } %>
-        <% if(territories.length===0){ %>
+        <% if(result.docs.length===0){ %>
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
                     <div class="alert alert-info text-center" role="alert">
@@ -33,9 +33,27 @@
             </div>
         <% } else { %>
             <div class="row">
-                <% territories.forEach((territory) => { %>
+                <% result.docs.forEach((territory) => { %>
                     <%- include("../partials/territory", {territory: territory}) %>
                 <% }) %>
+                <nav style="margin-top: 20px">
+                    <ul class="pagination justify-content-center">
+                        <% for( let index = 1; index <= result.totalPages; index++ ) { %>
+                            <% if (index === result.page) { %>
+                                <li class="page-item active">
+                                    <a href="/territories?page=<%= index %>" class="page-link"><%= index %></a>
+                                </li>
+                                
+                            <% } else { %>
+                                <li class="page-item">
+                                    <a href="/territories?page=<%= index %>" class="page-link"><%= index %></a>
+                                </li>
+                               
+                            <% } %>
+                        <% } %>
+                    
+                    </ul>
+                </nav>
             </div>
         <% } %>
     </div>      
@@ -44,7 +62,7 @@
         ({key: "AIzaSyDKvmIASZjDfZNXZZn2fa4pGvR6T3cQTcA", v: "weekly"});</script>
     <script src="/markerClustererCompiled.min.js"></script>
     <script>
-        const locations = <%-JSON.stringify(territories)%>;
+        const locations = <%-JSON.stringify(result.docs)%>;
         const countDays = <%-countDaysFromNow%>
 
         console.log(countDays)
