Nowe strony z paginacją i możliwość wyboru limitu dokumentów na stronie

--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,10 @@ body {
     margin-bottom: 10px;
 }
 
+.limitChoose span a {
+    text-decoration: none;
+}
+
 .page-link {
     color: #28a745;
 }
