--- a/views/congregations/new.ejs
+++ b/views/congregations/new.ejs
@@ -83,7 +83,14 @@
                                             </label>
                                             
                                         </div>
-                                   
+                                        <div class="form-group form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+                                            <label class="form-check-label" for="exampleCheck1">
+                                                Przeczytałem i zapoznałem się z
+                                                <a href="/policy">polityką prywatności</a>
+                                               
+                                            </label>
+                                        </div>
                                     
                                     <input type="submit" value="Zarejestruj zbór" class="btn btn-success button btn-green" id="send">
                                    
