--- a/views/partials/territorySearch.ejs
+++ b/views/partials/territorySearch.ejs
@@ -25,7 +25,7 @@
                         <a class="dropdown-item" id="kind">Rodzaj terenu</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="/territories/search">Zajęte tereny</a>
+                        <a class="dropdown-item" href="/territories/search?taken=Zajęte tereny">Zajęte tereny</a>
                     </li>
                 </ul>
             </div>
