--- a/views/policy.ejs
+++ b/views/policy.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/headera") %>
-<div class="col-lg-6 col-md-12" id="form" style="height: 100%;">
+
     <div class="row justify-content-center">
-        <div class="col-lg-10 col-md-12" style="margin-top: 6%">
+        <div class="col-lg-6 col-md-12" id="form">
             <div id="form1">
                 <a href="/login">
                     <i class="fas fa-arrow-left"></i>
@@ -46,6 +46,9 @@
                                     </li>
                                     <li class="description">
                                         Wyświetlanie imienia i nazwiska danej osoby na karcie terenu
+                                    </li>
+                                    <li class="description">
+                                        Prezentacja list grup służby
                                     </li>
                                 </ul>
                             </li>
@@ -568,7 +571,6 @@
         </div>
         
     </div>
-</div>
 
 </body>
 </html>
