--- a/views/territories/search.ejs
+++ b/views/territories/search.ejs
@@ -4,12 +4,12 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="text-center">
-                    Znalezione tereny zboru <%= currentUser.username %> dla parametru <%= param %>: <%= territories.length %>
+                    Znalezione tereny zboru <%= currentUser.username %> dla parametru <%= param %>: <%= result.totalDocs %>
                 </h1>
             </div>
         </div>
         <%- include("../partials/territorySearch") %>
-        <% if(territories.length===0){ %>
+        <% if(result.docs.length===0){ %>
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-12">
                     <div class="alert alert-info text-center" role="alert">
@@ -18,10 +18,28 @@
                 </div>
             </div>
         <% } else { %>
-            <div class="row">
-                <% territories.forEach((territory) => { %>
+            <div class="row" style="padding-bottom: 80px;">
+                <% result.docs.forEach((territory) => { %>
                     <%- include("../partials/territory", {territory: territory}) %>
                 <% }) %>
+                <nav>
+                    <ul class="pagination justify-content-center">
+                        <% for( let index = 1; index <= result.totalPages; index++ ) { %>
+                            <% if (index === result.page) { %>
+                                <li class="page-item active">
+                                    <a href="/territories/search?<%= paramName %>=<%= param %>&page=<%= index %>" class="page-link"><%= index %></a>
+                                </li>
+                                
+                            <% } else { %>
+                                <li class="page-item">
+                                    <a href="/territories/search?<%= paramName %>=<%= param %>&page=<%= index %>" class="page-link"><%= index %></a>
+                                </li>
+                               
+                            <% } %>
+                        <% } %>
+                    
+                    </ul>
+                </nav>
             </div>
         <% } %>
     </div>      
