--- a/public/style.css
+++ b/public/style.css
@@ -51,6 +51,10 @@ body {
     text-decoration: none;
 }
 
+.limitChoose span a {
+    text-decoration: none;
+}
+
 .page-link {
     color: #28a745;
 }
