--- a/views/policy.ejs
+++ b/views/policy.ejs
@@ -30,7 +30,7 @@
                             </li>
                             <li class="description">
                                 Adres kontaktowy poczty elektronicznej operatora:
-                                admin@wbesiteswithpassion.pl
+                                admin@websiteswithpassion.pl
                             </li>
                             <li class="description">
                                 Operator jest Administratorem Twoich danych 
@@ -257,24 +257,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="title">
-                        Istotne techniki marketingowe
-                        <ul>
-                            <li class="description">
-                                Operator stosuje analizę statystyczną ruchu na 
-                                stronie, poprzez Google Analytics (Google Inc. 
-                                z siedzibą w USA). Operator nie przekazuje do 
-                                operatora tej usługi danych osobowych, a jedynie 
-                                zanonimizowane informacje. Usługa bazuje na 
-                                wykorzystaniu ciasteczek w urządzeniu końcowym 
-                                użytkownika. W zakresie informacji o preferencjach 
-                                użytkownika gromadzonych przez sieć reklamową Google 
-                                użytkownik może przeglądać i edytować informacje 
-                                wynikające z plików cookies przy pomocy narzędzia: 
-                                https://www.google.com/ads/preferences/
-                            </li>
-                        </ul>
-                    </li>
+                    
                     <li class="title">
                         Informacja o plikach cookies
                         <ul>
